stable-sort/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
  --> tests/04-variants-with-data.rs:15:5
   |
15 |     Dyn(Box<dyn StdError>),
   |     ^^^
